rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__default-inserted-folder__decoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Folder
  class: Folder
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
  children: []
